compiler/tests/compile-error/recur-errors.arret
(import [stdlib base])

(defn non-tail-reverse #{T} ([lst (List & T)]) -> (List & T)
  (if (nil? lst)
    lst
    (concat (recur (rest lst)) (list (first lst)))))
           ;^^^^^^^^^^^^^^^^^^ ERROR non-tail `(recur)`

(defn recur-without-fun-ty-decl () (recur))
                                  ;^^^^^^^ ERROR type annotation needed

(defn recur-with-non-generic-argument #{[T Num]}
  ([v T]) -> () (recur 5))
                      ;^ ERROR mismatched types

(defn main! () ->! () ())